fix: add item button not showing

--- a/Resources/public/css/editor.css
+++ b/Resources/public/css/editor.css
@@ -342,8 +342,8 @@ body.toolkit {
 }
 
 .toolkit .eight-list-decorator {
-    padding-bottom: 40px;
-    margin-bottom: 40px;
+    padding-bottom: 40px !important;
+    margin-bottom: 40px !important;
 }
 
 .modal-title {
